--- a/frontend/reset.html
+++ b/frontend/reset.html
@@ -37,7 +37,7 @@
             <form id="reset-form" class="auth-form">
                 <div class="form-group">
                     <label for="email">Email Address</label>
-                    <input type="email" id="email" placeholder="you@example.com" required autocomplete="email">
+                    <input type="email" id="email" name="email" placeholder="you@example.com" required autocomplete="email">
                     <small class="form-hint">Enter the email associated with your account</small>
                 </div>
 
