--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -255,7 +255,7 @@
         }
     </script>
 
-    <script src="../public/config.js"></script>
+    <script src="/public/config.js"></script>
     <script type="module" src="js/notes.js"></script>
 </body>
 
