--- a/frontend/index.html
+++ b/frontend/index.html
@@ -149,7 +149,7 @@
         }
     </script>
 
-    <script src="../public/config.js"></script>
+    <script src="/public/config.js"></script>
     <script type="module" src="js/auth.js"></script>
 </body>
 
