--- a/frontend/reset.html
+++ b/frontend/reset.html
@@ -129,7 +129,7 @@
         }
     </script>
 
-    <script src="../public/config.js"></script>
+    <script src="/public/config.js"></script>
     <script type="module" src="js/auth.js"></script>
 </body>
 
