UI Design Improvement

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -28,7 +28,7 @@
                     <circle cx="12" cy="7" r="4" />
                 </svg>
             </div>
-            <span class="greeting-text">Hi, <span id="user-display-name">User</span></span>
+            <span class="greeting-text">Likhlo: Your Own diary</span>
         </div>
         <button class="menu-toggle" id="menu-toggle">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
